# MediaSDK

./: CMakeLists.txt  README.md
_studio/: CMakeLists.txt
_studio/enctools/: CMakeLists.txt  OpenSourceCMakeLists.txt  enctools_lib.props  enctools_lib.vcxproj  sources_ext.cmake
_studio/enctools/aenc/include/: aenc++.h  aenc.h  asc_cpu_detect.h  av1_scd.h
_studio/enctools/aenc/src/: aenc.cpp  av1_asc.cpp  av1_asc_tree.cpp
_studio/enctools/include/: mfx_enctools.h  mfx_enctools_allocator.h  mfx_enctools_brc.h  mfx_enctools_lpla.h
_studio/enctools/src/: mfx_enctools_aenc.cpp  mfx_enctools_allocator.cpp  mfx_enctools_brc.cpp  mfx_enctools_common.cpp  mfx_enctools_lpla.cpp
_studio/mfx_lib/: Android.mk  CMakeLists.txt
_studio/mfx_lib/encode_hw/: CMakeLists.txt
_studio/mfx_lib/encode_hw/shared/: ehw_task_manager.cpp  (+1 more)
_studio/mfx_lib/lpla/: lpla.props  lpla.vcxproj  lpla.vcxproj.filters  mfx_lp_lookahead.h  sources_ext.cmake
_studio/mfx_lib/plugin/: CMakeLists.txt
_studio/shared/include/: libmfx_core_interface.h  libmfx_core_vaapi.h  mfx_config.h  mfx_ext_buffers.h  mfx_vpp_interface.h  mfxenctools-int.h  va_mem_copy.h
_studio/shared/src/: cm_mem_copy.cpp  libmfx_allocator_vaapi.cpp  libmfx_core.cpp  libmfx_core_vaapi.cpp  mfx_static_assert_structs.cpp  mfx_umc_alloc_wrapper.cpp  mfx_vpp_vaapi.cpp  va_mem_copy.cpp
android/: mfx_defs.mk
api/include/: mfxcommon.h  mfxdefs.h  mfxstructures.h
api/mediasdk_structures/: ts_ext_buffers_decl.h  ts_struct_decl.h
builder/: FindGlobals.cmake  FindOpenGL.cmake
doc/: mediasdk-man.md
doc/samples/: readme-decode_linux.md  readme-multi-transcode_linux.md
samples/: CMakeLists.txt
samples/sample_camera/include/: camera_sysmem_allocator.h
samples/sample_common/include/: base_allocator.h  general_allocator.h  sample_utils.h  sysmem_allocator.h  vaapi_allocator.h  vaapi_utils.h
samples/sample_common/src/: base_allocator.cpp  general_allocator.cpp  sample_utils.cpp  sysmem_allocator.cpp  vaapi_allocator.cpp  vaapi_device.cpp  vaapi_utils.cpp
samples/sample_decode/include/: pipeline_decode.h
samples/sample_decode/src/: pipeline_decode.cpp  sample_decode.cpp
samples/sample_encode/: CMakeLists.txt
samples/sample_encode/include/: pipeline_encode.h
samples/sample_encode/src/: pipeline_encode.cpp  pipeline_user.cpp  sample_encode.cpp
samples/sample_fei/src/: sample_fei.cpp
samples/sample_multi_transcode/include/: pipeline_transcode.h
samples/sample_multi_transcode/src/: pipeline_transcode.cpp  transcode_utils.cpp
samples/sample_vpp/include/: sample_vpp_utils.h
samples/sample_vpp/src/: sample_vpp.cpp  sample_vpp_parser.cpp  sample_vpp_utils.cpp
tutorials/common/: common_vaapi.cpp
(+71 files in other folders)
